--- a/REST_SpringBoot_CRUD/Employee_Management_System/src/main/resources/application.properties
+++ b/REST_SpringBoot_CRUD/Employee_Management_System/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #server.servlet.context-path=/ems
 server.servlet.session.persistent=false
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/ems?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=D3_80316_Anurag
-spring.datasource.password=80316
+spring.datasource.url=jdbc:mysql://localhost:3306/ems2?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
@@ -20,3 +20,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 #property to disable hibernateLazyInitializer during initialized proxies
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#multipart properties
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=11MB
+#custom property to specify location of images folder realtive to curnt project
+folder.location=images/
+
